k8s/httpbin-service-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-public
  namespace: httpbin
spec:
  selector:
    app: httpbin
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
