k8s/httpbin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
  namespace: httpbin
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
      - httpbin.local
    secretName: httpbin-tls
  rules:
  - host: httpbin.local
    http:
      paths:
      - path: /get
        pathType: Prefix
        backend:
          service:
            name: httpbin-public
            port:
              number: 80
